# DiffVax

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
configs/: train.yml
notebooks/: diffvax_comparison.ipynb  diffvax_demo.ipynb
scripts/: compare_baselines.py  demo.py  download_dataset.py  evaluate.py  train.py
src/diffvax/: __init__.py  attack.py  model.py  utils.py
src/diffvax/immunization/: __init__.py  diffusionguard_immunization.py  diffvax_immunization.py  photoguard_immunization.py
src/diffvax/metrics/: __init__.py  base.py  clip_score.py  factory.py  fsim.py  psnr.py  ssim.py
